# trustzone-m-tools

./: Cargo.toml  README.md  trustzone_memory.x.in
example/: .gitignore  Cargo.toml  memory.x
example/.cargo/: config.toml
example/non-secure/: Cargo.toml  build.rs
example/non-secure/src/: main.rs  other_private_thing.rs
example/non-secure/src/other_public_thing/: mod.rs
example/secure/: Cargo.toml  build.rs
example/secure/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
nonsecure-rt/: Cargo.toml  build.rs  link.x.in
nonsecure-rt/src/: lib.rs
secure-rt/: Cargo.toml  build.rs
secure-rt/src/: generic.rs  lib.rs  nrf.rs
tools/: Cargo.toml
tools/src/: bindings_generator.rs  lib.rs  nonsecure_callable_macro.rs  secure_callable_macro.rs
tools/test-sources/: nonsecure_callable_simple_result.txt  nonsecure_callable_simple_test.txt  secure_callable_simple_result.txt  secure_callable_simple_test.txt
utils/: Cargo.toml
utils/src/: lib.rs
