[package]
name = "trustzone-m-secure-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
nrf9160-pac = { version = "0.11.0", optional = true }
nrf5340-app-pac = { version = "0.11.0", optional = true }
rtt-target = { version = "0.3" }

[features]
# default = ["nrf5340"]
generic = []

nrf9160 = ["_nrf", "dep:nrf9160-pac"]
nrf5340 = ["_nrf", "dep:nrf5340-app-pac"]

# Features starting with `_` are for internal use only. They're not intended
# to be enabled by other crates, and are not covered by semver guarantees.

_nrf = []
