[package]
name = "trustzone-m-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.43"
syn = { version = "1.0.99", features = ["full"] }
quote = "1.0.21"
crc = "3.0.0"

[dev-dependencies]
prettyplease = "0.1.19"
pretty_assertions = "1.3.0"
