[package]
name = "secure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7"
cortex-m = "0.7"
rtt-target = { version = "0.3", features = ["cortex-m"] }
trustzone-m-macros = { path = "../../trustzone-m-tools/macros" }
trustzone-m-secure-rt = { path = "../../trustzone-m-tools/secure-rt", features = ["nrf9160"] }

[build-dependencies]
trustzone-m-tools = { path = "../../trustzone-m-tools/tools" }
